--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.2",
     "pinia": "^2.1.7",
     "postcss": "^8.4.32",
+    "sweetalert2": "^11.23.0",
     "tailwindcss": "^3.3.6",
     "tom-select": "^2.4.3",
     "vue": "^3.3.8",
